--- a/courier/package.json
+++ b/courier/package.json
@@ -3,20 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^3.3.0",
+    "axios": "^0.24.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "formik": "^2.2.9",
+    "morgan": "^1.10.0",
+    "mysql2": "^2.3.2",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/node": "^16.11.6",
     "@types/react": "17.0.32",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
-    "typescript": "4.4.4"
+    "prisma": "^3.3.0",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.4.4"
   }
 }
