--- a/courier/package.json
+++ b/courier/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "node server.js",
+    "dev": "nodemon server.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,9 +11,11 @@
   "dependencies": {
     "@prisma/client": "^3.3.0",
     "axios": "^0.24.0",
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "formik": "^2.2.9",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.2",
     "next": "11.1.2",
@@ -27,6 +29,7 @@
     "@types/react": "17.0.32",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
+    "nodemon": "^2.0.14",
     "prisma": "^3.3.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
