--- a/courier/package.json
+++ b/courier/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-jwt": "^6.1.0",
     "formik": "^2.2.9",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
