--- a/courier/package.json
+++ b/courier/package.json
@@ -20,6 +20,7 @@
     "morgan": "^1.10.0",
     "mysql2": "^2.3.2",
     "next": "11.1.2",
+    "qrcode.react": "^1.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@types/node": "^16.11.6",
+    "@types/qrcode.react": "^1.0.2",
     "@types/react": "17.0.32",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
