--- a/courier/package.json
+++ b/courier/package.json
@@ -19,7 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.2",
-    "next": "11.1.2",
+    "next": "^12.0.1",
     "qrcode.react": "^1.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
