--- a/courier/package.json
+++ b/courier/package.json
@@ -17,6 +17,7 @@
     "express-jwt": "^6.1.0",
     "formik": "^2.2.9",
     "jsonwebtoken": "^8.5.1",
+    "luxon": "^2.0.2",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.2",
     "next": "^12.0.1",
