--- a/courier/package.json
+++ b/courier/package.json
@@ -28,6 +28,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/luxon": "^2.0.5",
     "@types/node": "^16.11.6",
     "@types/qrcode.react": "^1.0.2",
     "@types/react": "17.0.32",
