--- a/courier/package.json
+++ b/courier/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "nodemon server.js",
     "build": "next build",
-    "start": "next start",
+    "start": "node server.js",
     "lint": "next lint"
   },
   "dependencies": {
@@ -21,6 +21,7 @@
     "morgan": "^1.10.0",
     "mysql2": "^2.3.2",
     "next": "^12.0.1",
+    "next-auth": "^4.0.5",
     "qrcode.react": "^1.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
