--- a/courier/package.json
+++ b/courier/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.1",
     "@prisma/client": "^3.3.0",
     "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
