--- a/courier/package.json
+++ b/courier/package.json
@@ -16,7 +16,6 @@
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "express-jwt": "^6.1.0",
     "formik": "^2.2.9",
     "jsonwebtoken": "^8.5.1",
     "luxon": "^2.0.2",
@@ -28,6 +27,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-query": "^3.34.19",
     "yup": "^0.32.11"
   },
   "devDependencies": {
