--- a/courier/package.json
+++ b/courier/package.json
@@ -1,6 +1,6 @@
 {
   "name": "courier",
-  "version": "0.1.0",
+  "version": "0.6.0",
   "private": true,
   "scripts": {
     "dev": "nodemon server.js",
@@ -10,36 +10,37 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next-auth/prisma-adapter": "^1.0.1",
-    "@prisma/client": "^3.6.0",
-    "axios": "^0.24.0",
+    "@next-auth/prisma-adapter": "^1.0.3",
+    "@prisma/client": "^3.14.0",
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
+    "express": "^4.18.1",
     "formik": "^2.2.9",
     "jsonwebtoken": "^8.5.1",
-    "luxon": "^2.0.2",
+    "luxon": "^2.4.0",
     "morgan": "^1.10.0",
-    "mysql2": "^2.3.2",
-    "next": "^12.0.1",
-    "next-auth": "^4.0.5",
-    "qrcode.react": "^1.0.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "mysql2": "^2.3.3",
+    "next": "^12.1.6",
+    "next-auth": "^4.3.4",
+    "qrcode.react": "^3.0.2",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
     "react-icons": "^4.3.1",
-    "react-query": "^3.34.19",
+    "react-query": "^3.39.1",
+    "react-table": "^7.8.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@types/luxon": "^2.0.5",
-    "@types/node": "^16.11.6",
+    "@types/luxon": "^2.3.2",
+    "@types/node": "^17.0.36",
     "@types/qrcode.react": "^1.0.2",
-    "@types/react": "17.0.32",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2",
-    "nodemon": "^2.0.14",
-    "prisma": "^3.6.0",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.4.4"
+    "@types/react": "18.0.9",
+    "eslint": "8.16.0",
+    "eslint-config-next": "12.1.6",
+    "nodemon": "^2.0.16",
+    "prisma": "^3.14.0",
+    "ts-node": "^10.8.0",
+    "typescript": "^4.7.2"
   }
 }
