--- a/courier/package.json
+++ b/courier/package.json
@@ -29,7 +29,8 @@
     "react-icons": "^4.3.1",
     "react-query": "^3.39.1",
     "react-table": "^7.8.0",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
     "@types/luxon": "^2.3.2",
