--- a/courier/package.json
+++ b/courier/package.json
@@ -3,7 +3,7 @@
   "version": "0.6.0",
   "private": true,
   "scripts": {
-    "dev": "nodemon server.js",
+    "dev": "nodemon server.mjs",
     "nextdev": "next dev",
     "build": "next build",
     "start": "node server.js",
@@ -21,7 +21,7 @@
     "luxon": "^2.4.0",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
-    "next": "^12.1.6",
+    "next": "^12.1.7-canary.42",
     "next-auth": "^4.3.4",
     "qrcode.react": "^3.0.2",
     "react": "18.1.0",
