--- a/courier/package.json
+++ b/courier/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.3",
-    "@prisma/client": "^3.14.0",
+    "@prisma/client": "^3.15.2",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
@@ -19,14 +19,15 @@
     "formik": "^2.2.9",
     "jsonwebtoken": "^8.5.1",
     "luxon": "^2.4.0",
+    "match-sorter": "^6.3.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "next": "^12.1.7-canary.42",
-    "next-auth": "^4.3.4",
+    "next-auth": "^4.5.0",
     "qrcode.react": "^3.0.2",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-icons": "^4.3.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
     "react-query": "^3.39.1",
     "react-table": "^7.8.0",
     "yup": "^0.32.11",
@@ -34,14 +35,15 @@
   },
   "devDependencies": {
     "@types/luxon": "^2.3.2",
-    "@types/node": "^17.0.36",
+    "@types/node": "^18.0.0",
     "@types/qrcode.react": "^1.0.2",
-    "@types/react": "18.0.9",
-    "eslint": "8.16.0",
+    "@types/react": "18.0.14",
+    "eslint": "^8.18.0",
     "eslint-config-next": "12.1.6",
+    "namor": "^2.0.3",
     "nodemon": "^2.0.16",
-    "prisma": "^3.14.0",
-    "ts-node": "^10.8.0",
-    "typescript": "^4.7.2"
+    "prisma": "^3.15.2",
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.4"
   }
 }
