--- a/courier/package.json
+++ b/courier/package.json
@@ -43,6 +43,7 @@
     "namor": "^2.0.3",
     "nodemon": "^2.0.16",
     "prisma": "^3.15.2",
+    "styled-components": "^5.3.5",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.4"
   }
