--- a/courier/package.json
+++ b/courier/package.json
@@ -23,7 +23,7 @@
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "next": "^12.1.7-canary.42",
-    "next-auth": "^4.5.0",
+    "next-auth": "^4.6.1",
     "qrcode.react": "^3.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -34,6 +34,7 @@
     "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
+    "@mermaid-js/mermaid-cli": "^9.1.3",
     "@types/luxon": "^2.3.2",
     "@types/node": "^18.0.0",
     "@types/qrcode.react": "^1.0.2",
@@ -41,8 +42,9 @@
     "eslint": "^8.18.0",
     "eslint-config-next": "12.1.6",
     "namor": "^2.0.3",
-    "nodemon": "^2.0.16",
+    "nodemon": "^2.0.18",
     "prisma": "^3.15.2",
+    "prisma-erd-generator": "^0.11.4",
     "styled-components": "^5.3.5",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.4"
