--- a/courier/package.json
+++ b/courier/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.3",
-    "@prisma/client": "^3.15.2",
+    "@prisma/client": "^4.0.0",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
@@ -22,9 +22,9 @@
     "match-sorter": "^6.3.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
-    "next": "^12.1.7-canary.42",
-    "next-auth": "^4.6.1",
-    "qrcode.react": "^3.0.2",
+    "next": "^12.2.0",
+    "next-auth": "^4.7.0",
+    "qrcode.react": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
@@ -40,10 +40,10 @@
     "@types/qrcode.react": "^1.0.2",
     "@types/react": "18.0.14",
     "eslint": "^8.18.0",
-    "eslint-config-next": "12.1.6",
+    "eslint-config-next": "12.2.0",
     "namor": "^2.0.3",
     "nodemon": "^2.0.18",
-    "prisma": "^3.15.2",
+    "prisma": "^4.0.0",
     "prisma-erd-generator": "^0.11.4",
     "styled-components": "^5.3.5",
     "ts-node": "^10.8.1",
