--- a/courier/package.json
+++ b/courier/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "nodemon server.mjs",
+    "debug": "nodemon --inspect server.mjs",
     "nextdev": "next dev",
     "build": "next build",
     "start": "node server.js",
@@ -34,6 +35,7 @@
     "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.3.0",
     "@mermaid-js/mermaid-cli": "^9.1.3",
     "@types/luxon": "^2.3.2",
     "@types/node": "^18.0.0",
