--- a/courier/package.json
+++ b/courier/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "cryptr": "^6.0.3",
     "express": "^4.18.1",
     "formik": "^2.2.9",
     "jsonwebtoken": "^8.5.1",
