--- a/courier/package.json
+++ b/courier/package.json
@@ -7,11 +7,14 @@
     "debug": "nodemon --inspect server.mjs",
     "nextdev": "next dev",
     "build": "next build",
-    "start": "node server.js",
-    "lint": "next lint"
+    "start": "next start",
+    "lint": "next lint",
+    "export": "next export",
+    "ss": "node server.mjs"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.3",
+    "@next/bundle-analyzer": "^12.2.2",
     "@prisma/client": "^4.0.0",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
