--- a/courierMobile/IonicCapacitor/package.json
+++ b/courierMobile/IonicCapacitor/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "courier",
-  "version": "0.6.0",
+  "name": "Courier-Ionic",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "dev": "nodemon server.mjs",
@@ -13,46 +13,11 @@
     "ss": "next build && set NODE_ENV=production&& node server.mjs"
   },
   "dependencies": {
-    "@next-auth/prisma-adapter": "^1.0.3",
-    "@next/bundle-analyzer": "^12.2.2",
-    "@prisma/client": "^4.0.0",
-    "axios": "^0.27.2",
-    "bcrypt": "^5.0.1",
-    "cors": "^2.8.5",
-    "cryptr": "^6.0.3",
-    "express": "^4.18.1",
-    "formik": "^2.2.9",
-    "jsonwebtoken": "^8.5.1",
-    "luxon": "^2.4.0",
-    "match-sorter": "^6.3.1",
-    "morgan": "^1.10.0",
-    "mysql2": "^2.3.3",
-    "next": "^12.2.0",
-    "next-auth": "^4.7.0",
-    "qrcode.react": "^3.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.4.0",
-    "react-query": "^3.39.1",
-    "react-table": "^7.8.0",
-    "yup": "^0.32.11",
-    "zustand": "^4.0.0-rc.1"
+    "@capacitor/android": "^3.6.0",
+    "@capacitor/core": "^3.6.0",
+    "@capacitor/ios": "^3.6.0"
   },
   "devDependencies": {
-    "@faker-js/faker": "^7.3.0",
-    "@mermaid-js/mermaid-cli": "^9.1.3",
-    "@types/luxon": "^2.3.2",
-    "@types/node": "^18.0.0",
-    "@types/qrcode.react": "^1.0.2",
-    "@types/react": "18.0.14",
-    "eslint": "^8.18.0",
-    "eslint-config-next": "12.2.0",
-    "namor": "^2.0.3",
-    "nodemon": "^2.0.18",
-    "prisma": "^4.0.0",
-    "prisma-erd-generator": "^0.11.4",
-    "styled-components": "^5.3.5",
-    "ts-node": "^10.8.1",
-    "typescript": "^4.7.4"
+    "@capacitor/cli": "^3.6.0"
   }
 }
