--- a/courier/Dockerfile
+++ b/courier/Dockerfile
@@ -1,65 +1,34 @@
-# Install dependencies only when needed
-FROM node:16-alpine AS deps
-# Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
-# RUN apk add --no-cache libc6-compat
+FROM node:16-alpine
+
+# Set working directory
 WORKDIR /app
 
-# Install dependencies based on the preferred package manager
-COPY package.json package-lock.json*  ./
-RUN \
-  [ -f package-lock.json ] && npm ci || \
-  (echo "Lockfile not found." && exit 1)
+# Install PM2 globally
+RUN npm install pm2@latest -g
 
-COPY prisma ./prisma/
+# Copy package.json and package-lock.json before other files
+# Utilise Docker cache to save re-installing dependencies if unchanged
+COPY ./package*.json ./
+
+# Install dependencies
+RUN npm ci
+
+COPY .env ./
+COPY ./prisma ./prisma/
+# Copy all files
+COPY . ./
+
 RUN npx prisma generate
-
-# Rebuild the source code only when needed
-FROM node:16-alpine AS builder
-WORKDIR /app
-COPY --from=deps /app/node_modules ./node_modules
-COPY . .
-
-# Next.js collects completely anonymous telemetry data about general usage.
-# Learn more here: https://nextjs.org/telemetry
-# Uncomment the following line in case you want to disable telemetry during the build.
-# ENV NEXT_TELEMETRY_DISABLED 1
-
-# RUN yarn build
-
-# If using npm comment out above and use below instead
+# Build app
 RUN npm run build
 
-# Production image, copy all the files and run next
-FROM node:16-alpine AS runner
-WORKDIR /app
-
-ENV NODE_ENV production
-# Uncomment the following line in case you want to disable telemetry during runtime.
-# ENV NEXT_TELEMETRY_DISABLED 1
-
-RUN addgroup --system --gid 1001 nodejs
-RUN adduser --system --uid 1001 nextjs
-
-# RUN npm install --global pm2
-
-# You only need to copy next.config.js if you are NOT using the default configuration
-COPY --from=builder /app/next.config.js ./
-COPY --from=builder /app/public ./public
-COPY --from=builder /app/package.json ./package.json
-COPY --from=builder  /app/prisma /app/prisma
-
-# Automatically leverage output traces to reduce image size
-# https://nextjs.org/docs/advanced-features/output-file-tracing
-COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
-COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
-
-USER nextjs
-
-
+# Expose the listening port
 EXPOSE 3000
 
-ENV PORT 3000
+# Run container as non-root (unprivileged) user
+# The node user is provided in the Node.js Alpine base image
+USER nextjs
 
-CMD ["npm", "run",  "startStandalone"]
-
-# CMD [ "pm2", "start", "server.js", "--name", "nextjs-courier-webapp"]
+# Run npm start script with PM2 when container starts
+CMD ["npm", "run", "pm2:migrate"]
+# CMD [ "pm2", "start", "node", "--", "run" "startStandalone" ]
