--- a/courier/package.json
+++ b/courier/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "nodemon server.mjs",
+    "dev:linux": "npx prisma migrate deploy && nodemon server.mjs",
     "debug": "nodemon --inspect server.mjs",
     "nextdev": "next dev",
     "build": "next build",
-    "startStandalone": "node server.js",
+    "startStandalone": "npx prisma migrate deploy && node server.js",
+    "pm2:migrate": "npx prisma migrate deploy && pm2-runtime server.js",
     "lint": "next lint",
     "export": "next export",
     "ss": "next build && set NODE_ENV=production&& node server.mjs",
@@ -27,7 +29,6 @@
     "luxon": "^3.0.1",
     "match-sorter": "^6.3.1",
     "morgan": "^1.10.0",
-    "mysql2": "^2.3.3",
     "next": "^12.2.3",
     "next-auth": "^4.10.2",
     "prisma": "^4.1.0",
