--- a/courier/docker-compose.yml
+++ b/courier/docker-compose.yml
@@ -1,29 +1,27 @@
-version: '3.9'
+version: '3.8'
 services:
   nginx:
     build: ./nginx
     ports:
       - 80:80
-      # - 443:443
     depends_on:
       - nextjs
 
   nextjs:
     build:
       context: .
-      dockerfile: Dockerfile.dev
-    container_name: nextjs_app
+      dockerfile: Dockerfile
+    container_name: nextjs
     depends_on:
-      - mysql
+      mysql:
+        condition: service_started
     ports:
       - '3000:3000'
-    restart: always
     expose:
       - '3000'
+    restart: always
 
   prisma_studio:
-    # links:
-    #   - mysql
     depends_on:
       mysql:
         condition: service_started
@@ -33,8 +31,6 @@ services:
     build:
       context: ./prisma
       dockerfile: Dockerfile
-    # volumes:
-    #   - /app/prisma
 
   mysql:
     container_name: mysql
@@ -43,8 +39,8 @@ services:
       - nextjsApp-mysql-data:/var/lib/mysql
     environment:
       - MYSQL_ROOT_PASSWORD=wl69trG7FzwzoyxfQTmxjsqF046KEPmi
-    # healthcheck:
-    #   test: out=$$(mysqladmin ping -h localhost -P 3306 -u root --password=wl69trG7FzwzoyxfQTmxjsqF046KEPmi 2>&1); echo $$out | grep 'mysqld is alive' || { echo $$out; exit 1; }
+    healthcheck:
+      test: out=$$(mysqladmin ping -h localhost -P 3306 -u root --password=wl69trG7FzwzoyxfQTmxjsqF046KEPmi 2>&1); echo $$out | grep 'mysqld is alive' || { echo $$out; exit 1; }
     restart: always
     expose:
       - '3306'
