--- a/courier/package.json
+++ b/courier/package.json
@@ -8,11 +8,12 @@
     "debug": "nodemon --inspect server.mjs",
     "nextdev": "next dev",
     "build": "next build",
-    "startStandalone": "npx prisma migrate deploy && node server.js",
+    "startStandalone": "npx prisma migrate deploy && node server.mjs",
     "pm2:migrate": "npx prisma migrate deploy && pm2-runtime server.js",
     "lint": "next lint",
     "export": "next export",
     "ss": "next build && set NODE_ENV=production&& node server.mjs",
+    "sss": " set NODE_ENV=production node server.mjs",
     "deploy": "set NODE_ENV=production&& node server.mjs"
   },
   "dependencies": {
@@ -31,6 +32,7 @@
     "morgan": "^1.10.0",
     "next": "^12.2.3",
     "next-auth": "^4.10.2",
+    "next-swc-linux-x64-gnu": "^11.1.1-canary.3",
     "prisma": "^4.1.0",
     "qrcode.react": "^3.1.0",
     "react": "18.2.0",
