--- a/courier/Dockerfile.test2
+++ b/courier/Dockerfile.test2
@@ -1,15 +1,18 @@
+#DOCKERFILE FOR NEXTJS FULL STACK W/ EXPRESS SERVER SO BASICALLY AND EXPRESS SERVER THAT ALSO SERVER STATIC FILES THAT WILL BE CACHED AND HANDLED BY NGINX
 # Install dependencies only when needed
 FROM node:16-alpine AS deps
 # Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
-RUN apk add --no-cache libc6-compat
+# RUN apk add --no-cache libc6-compat
 WORKDIR /app
-
 # Install dependencies based on the preferred package manager
-COPY package.json yarn.lock* package-lock.json* pnpm-lock.yaml* ./
+COPY package.json package-lock.json*  ./
 RUN \
-  if [ -f package-lock.json ]; then npm ci; \
-  else echo "Lockfile not found." && exit 1; \
-  fi
+  [ -f package-lock.json ] && npm ci || \
+  (echo "Lockfile not found." && exit 1)
+
+COPY .env ./
+COPY ./prisma ./prisma/
+# RUN npx prisma migrate deploy
 
 
 # Rebuild the source code only when needed
@@ -18,16 +21,16 @@ WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
 
+
 # Next.js collects completely anonymous telemetry data about general usage.
 # Learn more here: https://nextjs.org/telemetry
 # Uncomment the following line in case you want to disable telemetry during the build.
 # ENV NEXT_TELEMETRY_DISABLED 1
-RUN npx prisma generate
 
-RUN npm run build
+# RUN yarn build
 
 # If using npm comment out above and use below instead
-# RUN npm run build
+RUN npm run build
 
 # Production image, copy all the files and run next
 FROM node:16-alpine AS runner
@@ -39,26 +42,33 @@ ENV NODE_ENV production
 
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
+RUN npm install pm2@latest
 
+
+# RUN npm install --global pm2
 
 # You only need to copy next.config.js if you are NOT using the default configuration
 COPY --from=builder /app/next.config.js ./
 COPY --from=builder /app/public ./public
 COPY --from=builder /app/package.json ./package.json
+COPY --from=builder  /app/prisma /app/prisma
+
+RUN npx prisma generate
+
 
 # Automatically leverage output traces to reduce image size
 # https://nextjs.org/docs/advanced-features/output-file-tracing
-COPY --from=builder --chown=nextjs:nodejs /app/.next/ ./
+COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
 COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
-COPY ./prisma /app/prisma
-COPY .env ./
-
-
 
 USER nextjs
 
+
 # EXPOSE 3000
 
-ENV PORT 3000
+# ENV PORT 3000
 
-CMD ["npm", "run", "startStandalone"]
+# CMD ["npm", "run",  "startStandalone"]
+CMD ["npm", "run", "pm2:migrate"]
+
+# CMD [ "pm2", "start", "server.js", "--name", "nextjs-courier-webapp"]
