--- a/courier/docker-compose.yml
+++ b/courier/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3.8'
 services:
   nginx:
+    container_name: nginx
     build: ./nginx
     ports:
       - 80:80
@@ -15,17 +16,19 @@ services:
     depends_on:
       mysql:
         condition: service_started
-    ports:
-      - '3000:3000'
+    # ports:
+    #   - '3000:3000'
+    restart: always
     expose:
       - '3000'
-    restart: always
+    # env_file:
+    #   - './.env'
 
   prisma_studio:
+    container_name: prisma_studio
     depends_on:
       mysql:
         condition: service_started
-    container_name: prisma_studio
     ports:
       - '5555:5555'
     build:
