--- a/courier/package.json
+++ b/courier/package.json
@@ -8,18 +8,18 @@
     "debug": "nodemon --inspect server.mjs",
     "nextdev": "next dev",
     "build": "next build",
-    "startStandalone": "npx prisma migrate deploy && node server.mjs",
+    "startStandalone": "npx prisma migrate deploy && node server.js",
     "pm2:migrate": "npx prisma migrate deploy && pm2-runtime server.js",
     "lint": "next lint",
     "export": "next export",
     "ss": "next build && set NODE_ENV=production&& node server.mjs",
-    "sss": " set NODE_ENV=production node server.mjs",
+    "sss": "npx prisma generate && nodemon server.mjs",
     "deploy": "set NODE_ENV=production&& node server.mjs"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.4",
     "@next/bundle-analyzer": "^12.2.3",
-    "@prisma/client": "^4.1.0",
+    "@prisma/client": "^4.1.1",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
@@ -31,9 +31,8 @@
     "match-sorter": "^6.3.1",
     "morgan": "^1.10.0",
     "next": "^12.2.3",
-    "next-auth": "^4.10.2",
+    "next-auth": "^4.10.3",
     "next-swc-linux-x64-gnu": "^11.1.1-canary.3",
-    "prisma": "^4.1.0",
     "qrcode.react": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -47,13 +46,14 @@
     "@faker-js/faker": "^7.3.0",
     "@mermaid-js/mermaid-cli": "^9.1.4",
     "@types/luxon": "^3.0.0",
-    "@types/node": "^18.6.1",
+    "@types/node": "^18.6.3",
     "@types/qrcode.react": "^1.0.2",
     "@types/react": "18.0.15",
-    "eslint": "^8.20.0",
+    "eslint": "^8.21.0",
     "eslint-config-next": "12.2.3",
     "namor": "^2.0.4",
     "nodemon": "^2.0.19",
+    "prisma": "^4.1.1",
     "prisma-erd-generator": "^1.0.2",
     "styled-components": "^5.3.5",
     "ts-node": "^10.9.1",
