checkpoint, gpu driver issues

--- a/courier-t3/tsconfig.json
+++ b/courier-t3/tsconfig.json
@@ -18,9 +18,10 @@
     "incremental": true,
     "noUncheckedIndexedAccess": true,
     "paths": {
-      "@/components/*": ["components/*"]
+      "@/components/*": ["components/*"],
+      "@/utils/*": ["utils/*"]
     }
   },
-  "include": ["next-env.d.ts", "next-auth.d.ts", "**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx"],
+  "include": ["next-env.d.ts", "next-auth.d.ts", "**/*.ts", "**/*.tsx", "**/*.js"],
   "exclude": ["node_modules"]
 }
