--- a/courier-t3/package.json
+++ b/courier-t3/package.json
@@ -11,33 +11,35 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.4",
-    "@prisma/client": "^4.2.1",
-    "@trpc/client": "^9.27.0",
-    "@trpc/next": "^9.27.0",
-    "@trpc/react": "^9.27.0",
-    "@trpc/server": "^9.27.0",
+    "@prisma/client": "^4.3.1",
+    "@trpc/client": "^9.27.2",
+    "@trpc/next": "^9.27.2",
+    "@trpc/react": "^9.27.2",
+    "@trpc/server": "^9.27.2",
     "formik": "^2.2.9",
-    "next": "12.2.3",
+    "next": "12.3.1",
     "next-auth": "^4.10.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-query": "^3.39.2",
-    "superjson": "^1.9.1",
+    "react-table": "^7.8.0",
+    "superjson": "^1.10.0",
     "yup": "^0.32.11",
-    "zod": "^3.17.3",
-    "zustand": "^4.0.0"
+    "zod": "^3.19.1",
+    "zustand": "^4.1.1"
   },
   "devDependencies": {
-    "@types/node": "18.0.0",
-    "@types/react": "18.0.14",
-    "@types/react-dom": "18.0.5",
-    "autoprefixer": "^10.4.8",
-    "eslint": "8.18.0",
-    "eslint-config-next": "12.2.3",
+    "@types/node": "18.7.18",
+    "@types/react": "18.0.20",
+    "@types/react-dom": "18.0.6",
+    "@types/react-table": "^7.7.12",
+    "autoprefixer": "^10.4.12",
+    "eslint": "8.23.1",
+    "eslint-config-next": "12.3.1",
     "postcss": "^8.4.16",
-    "prisma": "^4.2.1",
+    "prisma": "^4.3.1",
     "tailwindcss": "^3.1.8",
-    "typescript": "4.7.4"
+    "typescript": "4.8.3"
   }
 }
