--- a/courier-t3/package.json
+++ b/courier-t3/package.json
@@ -11,14 +11,14 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.4",
-    "@prisma/client": "^4.3.1",
+    "@prisma/client": "^4.4.0",
     "@trpc/client": "^9.27.2",
     "@trpc/next": "^9.27.2",
     "@trpc/react": "^9.27.2",
     "@trpc/server": "^9.27.2",
     "formik": "^2.2.9",
     "next": "12.3.1",
-    "next-auth": "^4.10.3",
+    "next-auth": "^4.12.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
@@ -30,16 +30,24 @@
     "zustand": "^4.1.1"
   },
   "devDependencies": {
-    "@types/node": "18.7.18",
-    "@types/react": "18.0.20",
+    "@mermaid-js/mermaid-cli": "^9.1.6",
+    "@types/node": "18.7.23",
+    "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "@types/react-table": "^7.7.12",
     "autoprefixer": "^10.4.12",
-    "eslint": "8.23.1",
+    "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
-    "postcss": "^8.4.16",
-    "prisma": "^4.3.1",
+    "postcss": "^8.4.17",
+    "prisma": "^4.4.0",
+    "prisma-erd-generator": "^1.2.1",
     "tailwindcss": "^3.1.8",
-    "typescript": "4.8.3"
+    "typescript": "4.8.4"
+  },
+  "prettier": {
+    "trailingComma": "es5",
+    "tabWidth": 2,
+    "semi": false,
+    "singleQuote": true
   }
 }
