--- a/courier-t3/package.json
+++ b/courier-t3/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint",
     "postinstall": "prisma generate"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.4.0",
@@ -31,7 +34,7 @@
   },
   "devDependencies": {
     "@mermaid-js/mermaid-cli": "^9.1.7",
-    "@types/node": "18.8.5",
+    "@types/node": "^18.8.5",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "@types/react-table": "^7.7.12",
@@ -42,7 +45,8 @@
     "prisma": "^4.4.0",
     "prisma-erd-generator": "^1.2.1",
     "tailwindcss": "^3.1.8",
-    "typescript": "4.8.4"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   },
   "prettier": {
     "trailingComma": "es5",
