--- a/courier-t3/package.json
+++ b/courier-t3/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^2.29.3",
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
+    "micro": "^9.4.1",
     "next": "12.3.2",
     "next-auth": "^4.15.0",
     "react": "18.2.0",
