--- a/courier-t3/package.json
+++ b/courier-t3/package.json
@@ -26,6 +26,7 @@
     "micro": "^9.4.1",
     "next": "12.3.2",
     "next-auth": "^4.15.0",
+    "qrcode.react": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
