--- a/courier-t3/.eslintrc.json
+++ b/courier-t3/.eslintrc.json
@@ -1,3 +1,25 @@
 {
-  "extends": ["next/core-web-vitals", "next"]
+  "extends": ["next/core-web-vitals", "next", "prettier"]
+  // "env": {
+  //     "browser": true,
+  //     "es2021": true
+  // },
+  // "extends": [
+  //     "eslint:recommended",
+  //     "plugin:react/recommended",
+  //     "plugin:@typescript-eslint/recommended"
+  // ],
+  // "overrides": [
+  // ],
+  // "parser": "@typescript-eslint/parser",
+  // "parserOptions": {
+  //     "ecmaVersion": "latest",
+  //     "sourceType": "module"
+  // },
+  // "plugins": [
+  //     "react",
+  //     "@typescript-eslint"
+  // ],
+  // "rules": {
+  // }
 }
