--- a/courier-t3/package.json
+++ b/courier-t3/package.json
@@ -45,9 +45,13 @@
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
     "@types/react-table": "^7.7.12",
+    "@typescript-eslint/eslint-plugin": "^5.44.0",
+    "@typescript-eslint/parser": "^5.44.0",
     "autoprefixer": "^10.4.13",
-    "eslint": "8.26.0",
-    "eslint-config-next": "13.0.1",
+    "eslint": "^8.26.0",
+    "eslint-config-next": "^13.0.1",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-react": "^7.31.11",
     "postcss": "^8.4.18",
     "prisma": "^4.5.0",
     "prisma-erd-generator": "^1.2.2",
