--- a/courier-t3/package.json
+++ b/courier-t3/package.json
@@ -2,6 +2,7 @@
   "name": "courier-t3",
   "version": "0.7.0",
   "private": true,
+  "module": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -14,8 +15,8 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
-    "@prisma/client": "^4.5.0",
-    "@stripe/stripe-js": "^1.42.1",
+    "@prisma/client": "^4.8.1",
+    "@stripe/stripe-js": "^1.46.0",
     "@trpc/client": "^9.27.4",
     "@trpc/next": "^9.27.4",
     "@trpc/react": "^9.27.4",
@@ -24,40 +25,40 @@
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
     "micro": "^9.4.1",
-    "next": "12.3.2",
-    "next-auth": "^4.15.0",
+    "next": "12.3.4",
+    "next-auth": "^4.18.8",
+    "npm-check-updates": "^16.6.2",
     "qrcode.react": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.6.0",
+    "react-icons": "^4.7.1",
     "react-query": "^3.39.2",
     "react-table": "^7.8.0",
-    "stripe": "^10.15.0",
-    "superjson": "^1.11.0",
+    "stripe": "^10.17.0",
+    "superjson": "^1.12.2",
     "yup": "^0.32.11",
-    "zod": "^3.19.1",
-    "zustand": "^4.1.4"
+    "zod": "^3.20.2",
+    "zustand": "^4.3.2"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
-    "@mermaid-js/mermaid-cli": "^9.1.7",
-    "@types/node": "^18.11.9",
-    "@types/react": "18.0.24",
-    "@types/react-dom": "18.0.8",
-    "@types/react-table": "^7.7.12",
-    "@typescript-eslint/eslint-plugin": "^5.44.0",
-    "@typescript-eslint/parser": "^5.44.0",
+    "@mermaid-js/mermaid-cli": "^9.3.0",
+    "@types/node": "^18.11.18",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.10",
+    "@types/react-table": "^7.7.14",
+    "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "@typescript-eslint/parser": "^5.48.2",
     "autoprefixer": "^10.4.13",
-    "eslint": "^8.26.0",
-    "eslint-config-next": "^13.0.1",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-react": "^7.31.11",
-    "postcss": "^8.4.18",
-    "prisma": "^4.5.0",
-    "prisma-erd-generator": "^1.2.2",
-    "tailwindcss": "^3.2.1",
+    "eslint": "^8.32.0",
+    "eslint-config-next": "^13.1.2",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-react": "^7.32.1",
+    "postcss": "^8.4.21",
+    "prisma": "^4.8.1",
+    "tailwindcss": "^3.2.4",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.4"
   },
   "prettier": {
     "trailingComma": "es5",
