--- a/courier-t3/tsconfig.json
+++ b/courier-t3/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "ES6",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
-    "baseUrl": "./src",
+    "baseUrl": "src",
     "checkJs": false,
     "skipLibCheck": true,
     "strict": true,
