creating fake testing data

--- a/courier-t3/package.json
+++ b/courier-t3/package.json
@@ -30,6 +30,7 @@
     "@trpc/server": "~9.27.4",
     "dayjs": "^1.11.7",
     "formik": "^2.2.9",
+    "html5-qrcode": "^2.3.7",
     "lodash": "^4.17.21",
     "micro": "^9.4.1",
     "next": "~12.3.4",
